--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,8 +9,18 @@
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
 
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+}
+
 body {
     font-family: "Source Sans Pro", sans-serif !important;
+    // overflow-x: hidden;
+    box-sizing: border-box;
 }
 
 // img {
