--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -51,3 +51,42 @@ $dark-blue: #141c65;
         color: white !important;
     }
 }
+.btn-rating {
+    border: none;
+    padding: 2rem;
+    position: relative;
+    cursor: pointer;
+    background-color: transparent;
+    color: #ebd554;
+    // background-color: transparent;
+
+    // &::before {
+    //     content: "";
+    //     position: absolute;
+    //     top: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     background-color: red;
+    //     z-index: 99;
+    // }
+}
+
+.div-rating {
+    display: inline;
+    position: relative;
+}
+
+.rating-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 2rem;
+    color: #ebd554;
+}
+
+.rating-container {
+    display: flex;
+    justify-content: center;
+}
