feat: added dashboard and fix image gallery in places page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11217,6 +11217,10 @@ body {
   background-color: #141c65 !important;
 }
 
+.footer a {
+  color: white;
+}
+
 .navbar {
   background-color: #f0fffd !important;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
