--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -98,3 +98,28 @@ $dark-blue: #141c65;
     max-height: 22rem;
     overflow: hidden;
 }
+
+.attractions-header {
+    position: relative;
+    background: url("../../public/atr-bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 40% 35%;
+    color: white;
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: $blue;
+        opacity: 0.3;
+    }
+
+    .container {
+        position: relative;
+        z-index: 1;
+    }
+}
