--- a/resources/sass/_maps.scss
+++ b/resources/sass/_maps.scss
@@ -128,6 +128,7 @@ footer {
     color: #fff;
     line-height: 1em;
     text-transform: uppercase;
+    text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
 }
 .text h3 {
     font-size: 3em;
@@ -136,6 +137,7 @@ footer {
     color: #fff;
     line-height: 1em;
     text-transform: uppercase;
+    text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
 }
 .text p {
     font-size: 1.1em;
@@ -143,6 +145,7 @@ footer {
     margin: 20px 0;
     font-weight: 400;
     max-width: 700px;
+    text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
 }
 .text a {
     display: inline-block;
